--- a/src/main/resources/templates/reporting_popup.vm
+++ b/src/main/resources/templates/reporting_popup.vm
@@ -53,9 +53,9 @@
             </td>
           </tr>
           <tr>
-            <td colspan="2">
-              $i18n.getText('jttp.reporting.answer.2.9')
-              <textarea name="answer2" style="width: 75%; height: 130px; resize: none; border-radius: 0.3em;"></textarea>
+            <td colspan="2" style="padding-top: 5px;">
+              <label style="vertical-align: top; color: black;">$i18n.getText('jttp.reporting.answer.2.9')</label> 
+              <textarea name="answer2" style="width: 50%; height: 20px; resize: none; border-radius: 0.3em;"></textarea>
             </td>
           </tr>
           <tr>
@@ -69,9 +69,9 @@
             </td>
           </tr>
           <tr>
-            <td colspan="2">
-              $i18n.getText('jttp.reporting.answer.3.4')
-              <textarea name="answer3" style="width: 75%; height: 130px; resize: none; border-radius: 0.3em;"></textarea>
+            <td colspan="2" style="padding-top: 5px;">
+              <label style="vertical-align: top; color: black;"> $i18n.getText('jttp.reporting.answer.3.4')</label> 
+              <textarea name="answer3" style="width: 50%; height: 20px; resize: none; border-radius: 0.3em;"></textarea>
             </td>
           </tr>
           <tr>
@@ -163,7 +163,15 @@
 
 <script>
 
-window.onhashchange = jttpReportDialogShow();
+window.onhashchange = function(){
+    var currentHash = window.location.hash;
+    if (currentHash=="#reporting-dialog") {
+        window.location.hash = "";
+        AJS.dialog2("#reporting-dialog").show();
+        AJS.$("#reportingError").hide();
+        _paq.push(['trackEvent', 'User', 'Reporting']); 
+    }
+};
 window.onload = jttpReportDialogShow();
 
 // SEND FEEDBACK and hide the dialog
