--- a/src/main/resources/templates/adminsettings.vm
+++ b/src/main/resources/templates/adminsettings.vm
@@ -70,6 +70,14 @@
 		right: 3px;
 	}
     
+    #error_message{
+		color: white;
+		text-align: center;
+		border: 1px solid;
+		border-color: #d04437;
+		border-radius: 3px;
+		background-color: #d04437;
+	}
 </style>
 </head>
 <body>
@@ -86,6 +94,11 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 <form name="adminSettingForm"  method="post" action="JiraTimetrackerAdminSettingsWebAction.jspa"/>   
   	<div id="main-content" class="content rounded" style="width:970px;">
 		<div style="margin:10px; width:970px;">
+			#if(!$message.isEmpty())
+			  	<div id="error_message">
+			 			$i18n.getText($message)
+			  	</div>
+		  	#end
 			<table  width="100%" padding:"5px" >
 				<tbody>
 					<tr>
