--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -61,6 +61,14 @@ cursor:pointer;
     border:1px solid #D2D2D2;
     padding:4px;
 }
+
+.analitics {
+	border-top: 1px solid #D2D2D2;
+	padding-bottom: 10px;
+    padding-top: 20px;
+    padding-right: 5px;
+}
+
 input[type="text"]:disabled{
     background:#D3D3D3!important;
     background-color:#D3D3D3!important;
@@ -114,12 +122,13 @@ div.calendar {
 	padding-top: 6px;
 }
 
-#issueSelect-textarea, #issueSelect-multi-select{
+/*#issueSelect-textarea, #issueSelect-multi-select{
     width: 610px;
 }
+*/
 .jira-multi-select>.icon.drop-menu{
     bottom: 6px;
-    right: 6px;
+    /*right: 6px;*/
 }
 #error_message{
     color: white;
@@ -137,7 +146,6 @@ div.calendar {
 .jttp-calendar{
     text-align: left;
     vertical-align: inherit;
-    float: left;
     padding:5px;
 }
 
@@ -210,7 +218,8 @@ div.calendar {
 
 .settings-label-column{
 	text-align: right;
-	width:10%;
+	width:15%;
+	vertical-align: top;
 }
 
 .settings-value-column{
@@ -226,6 +235,12 @@ div.calendar {
 	margin-right: 10px;
 }
 
+.adminsettings-label-column{
+	text-align: right;
+	width:10%;
+	vertical-align: top;
+}
+
 .message{
 	text-align: center;
 	padding: 3px;
@@ -233,7 +248,33 @@ div.calendar {
 	width: 30%;
 }
 
+.warn-message{
+	text-align: center;
+	padding: 3px;
+	font-size: 11px;
+	width: 35%;
+	color: #3c78b5;
+	font-style:italic;
+}
+
 .result-table{
 	text-align: center;
 	padding-bottom: 5px;
+}
+
+.admin-settings-value-column{
+    padding-left: 5px;
+}
+
+.separator-space {
+	margin-bottom: 35px;
+}
+
+.red-text {
+	color: red;
+}
+
+.dates-textarea{
+	width: 95%;
+	height: 75px;
 }
