--- a/src/main/resources/templates/adminsettings.vm
+++ b/src/main/resources/templates/adminsettings.vm
@@ -16,90 +16,39 @@
 <html>
 <head>
 <title>Timetracker Global Settings</title>
-<style type="text/css">
-	.rowHeader {
-        background-color:#E2E2E2;
-    }
-    .rowAlter {
-        background-color:#F2F2F2;
-    }
-    .button {
-        padding: 2px;
-    }
-    .grid {
-        font-family:Arial,Helvetica,sans-serif; 
-        font-size:12px;
-        background-color:#FCFCFC;
-        border:1px solid #D2D2D2;
-        border-collapse:collapse;
-    }
-    .grid th, .grid td {
-        border:1px solid #D2D2D2;
-        padding:4px;
-    }
-    .content {
-		margin: 0 .714em .714em;
-		position: relative;
-	}
-    .rounded {
-		background-color: #fff;
-		border: 1px solid #bbb;
-		-moz-border-radius: .4em;
-		-webkit-border-radius: .4em;
-		border-radius: .4em;
-	}
-    .item-header {
-		margin: 12px 12px 0 12px;
-		min-height: 48px;
-		position: relative;
-		padding-left: 5px;
-		padding-right: 5px;
-		padding-top: 0px;
-	}
-	#main-content {
-		min-width: 990px;
-	}
-	.item-header .item-summary {
-		font-size: 2em;
-		line-height: 1.167;
-		margin: 0;
-	}
-	
-	.jira-multi-select>.icon.drop-menu{
-		bottom: 6px;
-		right: 3px;
-	}
-    
-</style>
 </head>
 <body>
 $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-resources")
-<div id="plugin_head" class="item-header" style="width:980px;">
-		<div style="float: right;">
-			#parse("templates/jttp_admin_feedback.vm")
-			<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+<div id="plugin_head" class="item-header">
+		<div class="logo-img">
+			#parse("templates/feedback_admin.vm")
+			<a href="http://www.everit.biz/" target="_blank">
+				<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42">
 			</a>
 		</div>
-		<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker Global Settings</h1>
+		<h1 class="item-summary">Timetracker Global Settings</h1>
 </div>
-<form name="adminSettingForm"  method="post" action="JiraTimetrackerAdminSettingsWebAction.jspa"/>   
-  	<div id="main-content" class="content rounded" style="width:970px;">
-		<div style="margin:10px; width:970px;">
-			<table  width="100%" padding:"5px" >
+<form name="adminSettingForm"  method="post" action="JiraTimetrackerAdminSettingsWebAction.jspa"/>	
+  	<div id="main-content" class="content rounded" >
+		<div class="inside-content">
+		#if(!$message.isEmpty())
+			  	<div id="error_message">
+			 			$i18n.getText($message)
+			  	</div>
+		  	#end
+			<table  class="summaty-table">
 				<tbody>
 					<tr>
-						<td style="text-align: right; vertical-align: top;" width="15%">
+						<td class="settings-label-column">
 							<h3>$i18n.getText("plugin.setting.non.working.issues")</h3>
 						</td>
-						<td >
-							<div id="issueSelect_container" class="ajax_autocomplete atlassian-autocomplete aui-ss" style="margin-bottom: 35px" >
+						<td class="admin-settings-value-column">
+							<div id="issueSelect_container" class="ajax_autocomplete atlassian-autocomplete aui-ss" >
 								<select class="hidden"
 										multiple="none" 
 							   			name="issueSelect" 
 										id="issueSelect" 
 							   			data-popup-link-message="" 
-							   			data-popup-width="620" 
 							   			data-popup-height="500" 
 							   			data-remove-on-un-select="true" 
 							   			data-ajax-options.query="true" 
@@ -126,17 +75,17 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 										ip.handleFreeInput();
 								</script>
 							</div>
-							<div class="description">
+							<div class="description separator-space">
 										$i18n.getText("plugin.setting.non.working.issues.help")
 							</div>
 						</td>
 					</tr>
 					<tr>
-						<td style="text-align: right;  vertical-align: top;" width="15%">
+						<td class="settings-label-column">
 							<h3>$i18n.getText("plugin.setting.nonestimated.issues")</h3>
 						</td>
-						<td >
-							<div id="issueSelect_container_collector" class="ajax_autocomplete atlassian-autocomplete" style="margin-bottom: 35px" >
+						<td class="admin-settings-value-column">
+							<div id="issueSelect_container_collector" class="ajax_autocomplete atlassian-autocomplete" >
 								<select class="hidden"
 										multiple="none" 
 							   			name="issueSelect_collector" 
@@ -169,32 +118,32 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 										ip.handleFreeInput();
 								</script>
 							</div>
-							<div class="description">
+							<div class="description separator-space">
 									$i18n.getText("plugin.setting.nonestimated.issues.help")
 							</div>
 						</td>
 					</tr>
 					<tr>
-						<td style="text-align: right; vertical-align: top;" width="15%">
-							<div style="margin-bottom: 10px; margin-top: 20px;">
+						<td class="settings-label-column">
+							<div>
 								<h3>$i18n.getText("plugin.setting.working.day")</h3>
 							</div>	
 						</td>
-						<td>
-							<div class="description" style="margin-top: 20px;">
+						<td class="admin-settings-value-column">
+							<div class="description">
 										$i18n.getText("plugin.setting.working.day.help")
 							</div>
 						</td>	
 					</tr>
 					<tr>
-						<td style="text-align: right;  vertical-align: top;" width="15%">
+						<td class="settings-label-column">
 							<strong>$i18n.getText("plugin.setting.exclude.dates")</strong>
 						</td>
-						<td>
-							<div id="messageExclude" style="color: red; ">
+						<td class="admin-settings-value-column">
+							<div id="messageExclude" class="red-text">
 		 							$i18n.getText($messageExclude) $messageParameterExclude
 		  					</div>
-							<textarea id="excludedates" name="excludedates" style="width: 95%; height: 75px;"></textarea>
+							<textarea id="excludedates" name="excludedates" class="dates-textarea"></textarea>
 							<script>
 								AJS.$("#excludedates").append("$excludeDates");
 							</script>
@@ -204,14 +153,14 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 						</td>		
 					</tr>
 					<tr>
-						<td style="text-align: right;  vertical-align: top;" width="15%">
+						<td class="settings-label-column">
 							<strong>$i18n.getText("plugin.setting.include.dates")</strong>
 						</td>
-						<td>
-							<div id="messageInclude" style="color: red; ">
+						<td class="admin-settings-value-column">
+							<div id="messageInclude" class="red-text">
 		 							$i18n.getText($messageInclude) $messageParameterInclude
 		  					</div>
-							<textarea id="includedates" name="includedates" style="width: 95%; height: 75px;"></textarea>
+							<textarea id="includedates" name="includedates" class="dates-textarea"></textarea>
 							<script>
 								AJS.$("#includedates").append("$includeDates");
 							</script>
@@ -221,13 +170,13 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 						</td>		
 					</tr>
 					<tr>
-						<td style="border-top: 1px solid #D2D2D2; text-align: right; vertical-align: top;" width="15%">
-							<div style="margin-bottom: 10px; margin-top: 20px;">
+						<td class="analitics settings-label-column">
+							<div >
 								<h3>$i18n.getText("plugin.settings.analytics")</h3>
 							</div>
 						</td>
-						<td style="border-top: 1px solid #D2D2D2;">
-							<div class="description" style="margin-top: 12px;">
+						<td class="analitics admin-settings-value-column">
+							<div class="description" >
 										$i18n.getText("plugin.settings.analytics.help")
 							</div>
 						</td>
