--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -16,29 +16,60 @@
 <html>
 <head>
 <title>Timetracker Chart Report</title>
+
+#set($rendererType = "atlassian-wiki-renderer")
+#if($currentCalendar.useISO8601 == true)
+	#set ($firstDay = 1)
+#else
+	#set ($firstDay = 0)
+#end
+
+
 </head>
 $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResource("jira.webresources:dwr", null)   
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
+$webResourceManager.requireResource("org.everit.jira.timetracker.plugin:chart_report-resources")
 <body>
+
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">
+
+	window.everit = window.everit || {};
+	everit.jttp = everit.jttp || {};
+	everit.jttp.chart_report = everit.jttp.chart_report || {};
+	#disable_html_escaping()
+	(function(jttp, jQuery) {
+		jttp.options = jQuery.extend( 
+			{},
+			jttp.options,
+			{
+				firstDay : ${firstDay},
+				useISO8601 : ${currentCalendar.useISO8601},
+				dateToFormated : ${dateToFormated},
+				dateFromFormated : ${dateFromFormated},
+				chartDataList : ${chartDataList}
+			}
+		);
+	})(everit.jttp.chart_report, AJS.$);
+	#enable_html_escaping()
+
+</script>
+
 <form name="chartReportForm"  method="get" action="JiraTimetrackerChartWebAction.jspa" />   
-	#set($rendererType = "atlassian-wiki-renderer")
-	#if($currentCalendar.useISO8601 == true)
-		#set ($firstDay = 1)
-	#else
-		#set ($firstDay = 0)
-	#end
-	<div id="plugin_head" class="item-header" >
+	
+	
+	<div id="plugin_head" class="item-header">
 			<div class="logo-img">
 				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" >
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42">
 				</a>
 			</div>
  			<h1 class="item-summary">Timetracker</h1>
   	</div>
-	<div id="main-content" class="content rounded" >
+	<div id="main-content" class="content rounded">
 		<div class="inside-content">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
@@ -66,31 +97,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 								$i18n.getText("plugin.from"): 
 								</td>
 								<td>
-								<input type="text" id="dateFrom" name="dateFrom" tabindex="1" onkeydown="return checkFromEnter(event);" value="$dateFromFormated"/>
-								 <script>
-						            function checkFromEnter(event){
-									    if (event.keyCode == 13) {
-									      AJS.$("#dateTo").focus();
-									      return false;
-									    }
-									}
-						          </script>
+								<input type="text" id="dateFrom" name="dateFrom" tabindex="1" onkeydown="return everit.jttp.chart_report.checkFromEnter(event);" value="$dateFromFormated"/>
 								<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
 									alt="Pick a date" style="vertical-align: sub;" title="$i18n.getText('plugin.choose.date')"/>
-								<script>
-								var cal= Calendar.setup({
-									firstDay : $firstDay,
-									inputField : 'dateFrom',
-									button : 'date_trigger_from',
-									date : '$dateFromFormated',
-									align : 'Br',
-									electric: false,
-									singleClick : true,
-									showOthers: true,
-									useISO8601WeekNumbers : $currentCalendar.useISO8601,
-									ifFormat : '%Y-%m-%d'
-								});
-								</script>
 							</td>
 						</tr>
 						<tr>
@@ -98,31 +107,9 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 								$i18n.getText("plugin.to"): 
 								</td>
 								<td>
-								<input type="text" id="dateTo" name="dateTo" tabindex="1" onkeydown="return checkToEnter(event);" value="$dateToFormated"/>
-								 <script>
-						            function checkToEnter(event){
-									    if (event.keyCode == 13) {
-									      AJS.$("#dateTo").focus();
-									      return false;
-									    }
-									}
-						          </script>
+								<input type="text" id="dateTo" name="dateTo" tabindex="1" onkeydown="return everit.jttp.chart_report.checkToEnter(event);" value="$dateToFormated"/>
 								<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0"
 									alt="Pick a date" style="vertical-align: sub;" title="$i18n.getText('plugin.choose.date')"/>
-								<script>
-								var cal= Calendar.setup({
-									firstDay : $firstDay,
-									inputField : 'dateTo',
-									button : 'date_trigger_to',
-									date : '$dateToFormated',
-									align : 'Br',
-									electric: false,
-									singleClick : true,
-									showOthers: true,
-									useISO8601WeekNumbers : $currentCalendar.useISO8601,
-									ifFormat : '%Y-%m-%d'
-								});
-								</script>
 							</td>
 						</tr>
 						<tr>
@@ -130,79 +117,17 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 								$i18n.getText("plugin.user"): 
 							</td>
 							<td>
-								<div style="width:300px;">
-									<select  id="userPicker" class="js-default-user-picker2 single-user-picker" name="userPicker" >
-								 	#if($userPickerObject)
+								<div class="field-group">
+									<select  id="userPicker" class="js-default-user-picker single-user-picker" name="userPicker">
+										#if($userPickerObject)
 										<option selected="selected" 
-											value="$userPickerObject.getKey()"
-									  		data-field-text="$userPickerObject.getDisplayName()"
-									  		style="background-image:url('$avatarURL')" >
-									  	$userPickerObject.getDisplayName()
-									 	</option>
-									 #end
+										 value="$userPickerObject.getKey()"
+										   data-field-text="$userPickerObject.getDisplayName()"
+										   style="background-image:url('$avatarURL')" >
+										  $userPickerObject.getDisplayName()
+										 </option>
+										#end   
 									</select>
-									<script>
-	 									AJS.$('.aui-ss, .aui-ss-editing, .aui-ss-field').attr("style","width: 300px;");
-	 									(function ($) {
-										    function createSingleUserPickers(ctx) {
-										
-										        var restPath = "/rest/api/2/user/picker";
-										
-										        $(".js-default-user-picker2", ctx).each(function () {
-										            var $this = $(this);
-										            if ($this.data("aui-ss")) return;
-										            var data = {showAvatar: true},
-										                inputText = $this.data('inputValue');
-										            new AJS.SingleSelect({
-										                element: $this,
-										                submitInputVal: true,
-										                showDropdownButton: !!$this.data('show-dropdown-button'),
-										                errorMessage: AJS.I18n.getText("user.picker.invalid.user", "'{0}'"),
-										                ajaxOptions: {
-										                    url: contextPath + restPath,
-										                    query: true, // keep going back to the sever for each keystroke
-										                    data: data,
-										                    formatResponse: JIRA.UserPickerUtil.formatResponse2
-										                },
-										                inputText: inputText
-										            });
-										        });
-										    }
-										
-										    JIRA.bind(JIRA.Events.NEW_CONTENT_ADDED, function (e, context, reason) {
-										        if (reason !== JIRA.CONTENT_ADDED_REASON.panelRefreshed) {
-										            createSingleUserPickers(context);
-										        }
-										    });
-										
-										})(AJS.$);
-										(function ($) {
-										    JIRA.UserPickerUtil = {
-										        formatResponse2: function (data) {
-										            var ret = [];
-										            $(data).each(function(i, suggestions) {
-										                var groupDescriptor = new AJS.GroupDescriptor({
-										                    weight: i, // order or groups in suggestions dropdown
-										                    label: suggestions.footer
-										                });
-										                $(suggestions.users).each(function(){
-										                    groupDescriptor.addItem(new AJS.ItemDescriptor({
-										                        value: this.key, // value of item added to select
-										                        text: this.key,
-										                        label: this.displayName, // title of lozenge
-										                        html: this.html,
-										                        icon: this.avatarUrl,
-										                        allowDuplicate: false,
-										                        highlighted: true
-										                    }));
-										                });
-										                ret.push(groupDescriptor);
-										            });
-										            return ret;
-										        }		
-										    };						
-										})(AJS.$);
-									</script>
 								</div>
 							</td>
 						</tr>
@@ -218,7 +143,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 				<div id="message" class="message" >
 							 			$i18n.getText("plugin.no.worklogs")
 				</div>
-				<div id="warn_message" style="text-align: center; padding: 3px; font-size: 11px; width: 35%; color: #3c78b5; font-style:italic;" >
+				<div id="warn_message" class="warn-message" >
 							 			$i18n.getText("plugin.worklog.permission.warning")
 				</div>
 			#elseif($chartDataList)
@@ -241,68 +166,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	</div>
 </form>
 
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-
-<script type="text/javascript">
-	window.onload = function() {
- 			AJS.$('.aui-ss, .aui-ss-editing, .aui-ss-field').attr("style","width: 300px;");
-		 };
-		 
-      //google.load("visualization", "1", {packages:["corechart"]});
-      //google.setOnLoadCallback(drawChart);
-      function drawChart() {
-      	 var dataArray = new Array();
-		 dataArray.push(['id','duration']);
-		 var initState= {selectedValues: []};
-		 #foreach ($chartData in $chartDataList)
-		 	var projectId = new String('$chartData.projectId');
-		 	var duration = new Number('$chartData.duration');
-		 	duration = duration/(1000*60*60);
-		 	duration = +duration.toFixed(2);
-		 	dataArray.push([projectId.toString(),duration]);
-		 	initState.selectedValues.push(projectId.toString());
-		 #end
-		 
-		var data = google.visualization.arrayToDataTable(dataArray);
-        
-        var control = new google.visualization.ControlWrapper({
-        containerId: 'control_div',
-        controlType: 'CategoryFilter',
-        options: {
-	            filterColumnIndex: 0,
-	            ui: {
-	            	'label' : '',
-	                'selectedValuesLayout' : 'belowStacked'
-	            }
-	    	},
-	    state : initState
-	    });
-    
-	    var chart = new google.visualization.ChartWrapper({
-	        containerId: 'chart_div',
-	        chartType: 'PieChart',
-	        options: {
-	            height: 500,
-	            width: 700,
-	            backgroundColor: 'transparent',
-        		pieSliceText: 'value',
-        		title: 'Hours worked by projects',
-        		legend: {position: 'right', alignment: 'center'}
-	        },
-	        view: {
-	            columns: [0, 1]
-	        }
-	    });
-	    
-	    var dashboard = new google.visualization.Dashboard(document.querySelector('#dashboard'));
-	    dashboard.bind([control], [chart]);
-	    dashboard.draw(data);
-      }
-      google.load('visualization', '1', {packages:['controls'], callback: drawChart});
-</script>
-
 #if($analyticsCheck)
-	#set($IDSITE = 3);
 	#parse("templates/analytics.vm")
 #end
 </body>
